[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/hud/inventory/background.png" type="Texture" id=1]
[ext_resource path="res://ui/hud/inventory/inventory.gd" type="Script" id=3]

[node name="Inventory" type="MarginContainer"]
margin_right = 22.0
margin_bottom = 8.0
mouse_filter = 2
size_flags_horizontal = 8
size_flags_vertical = 3
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
num_turrets = 5

[node name="Background" type="NinePatchRect" parent="."]
margin_right = 22.0
margin_bottom = 8.0
rect_min_size = Vector2( 22, 0 )
size_flags_horizontal = 8
texture = ExtResource( 1 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 22.0
margin_bottom = 8.0
mouse_filter = 2
custom_constants/margin_top = 4
custom_constants/margin_left = 1
custom_constants/margin_bottom = 4

[node name="TurretItems" type="VBoxContainer" parent="MarginContainer"]
margin_left = 11.0
margin_top = 4.0
margin_right = 11.0
margin_bottom = 4.0
mouse_filter = 2
size_flags_horizontal = 4
custom_constants/separation = 5

[node name="DraggableItems" type="Node2D" parent="."]
[connection signal="sort_children" from="MarginContainer/TurretItems" to="." method="_on_TurretItems_sort_children"]
